CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)

ADD_DEFINITIONS(-std=c++11)

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O -g")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")

SET(SOURCE "")

PROJECT(LD110)

ADD_SUBDIRECTORY(src)
INCLUDE_DIRECTORIES(include)
LINK_DIRECTORIES(lib)

ADD_LIBRARY(LD110 SHARED ${SOURCE})
TARGET_LINK_LIBRARIES(LD110 Analyzer)
